# CiviRank

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  environment.yml  model_download.py  pyproject.toml  start_server.py  utils.py  verify_new_model.ipynb
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
civirank/: analyzers.py  parsers.py  rankers.py
civirank/data/: polarization_dict_ger.csv  prosocial_dictionary_ger.csv
evaluation/: __init__.py  evaluate_analyzers.ipynb  evaluation.ipynb  evaluation.py  generate_evaluation_data.ipynb  prompts.md  utils.py
evaluation/figures/: civiscore_engagement.eps  civiscore_parent_child.eps  civiscore_per_bin.eps  civiscores_distribution.eps  correlation_matrix.eps  feature_distribution.eps  negative_votes_to_civiscore.eps  outlier_civiscore_engagement.eps  outlier_civiscore_parent_child.eps  overview.eps  powerlaw.eps  rank_showcase.eps  warnings_per_bin.eps
scripts/: download_models_test.py  model_download.py
src/civirank/: __init__.py  server.py  utils.py
src/civirank/ranker/: analyzers.py  parser.py  ranker.py  test_embeddings.ipynb
tests/: test_ranking.py
tests/test_data/: remark42_test.json  remark42_test_big.json
